Numbers display on screen - Added functionality to add numbers and operstors to display - Operators broke when another bug fixed - Numbers add to array item instead of as new items

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body h1 {
   text-shadow: 2px 2px 2px grey; }
 
 #display {
+  height: 6vmin;
   background-color: var(--display-color);
   font-size: 5vmin;
   text-align: right;
