--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,6 +48,7 @@ body h1 {
 }
 
 #display {
+    height: 6vmin;
     background-color: var(--display-color);
     font-size: 5vmin;
     text-align: right;
