Added scroll bar if calc text gets too long

--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,15 @@ body h1 {
   text-shadow: 2px 2px 2px grey; }
 
 #display {
-  height: 6vmin;
+  box-sizing: border-box;
+  height: 8vmin;
+  width: 48vmin;
   background-color: var(--display-color);
   text-align: right;
   padding: 1vw;
-  margin: 2vw 2vw 0 2vw; }
+  margin: 2vw 2vw 0 2vw;
+  overflow-y: hidden;
+  overflow-x: scroll; }
 
 #display-calculation {
   font-size: 5vmin;
@@ -65,6 +69,7 @@ BUTTON PAD
   display: flex; }
 
 .button {
+  box-sizing: border-box;
   font-size: 5vmin;
   height: 10vmin;
   width: 12vmin;
